<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright (c) 2009-2011, WSO2 Inc. (http://www.wso2.org) All Rights
    Reserved. ~ ~ Licensed under the Apache License, Version 2.0 (the
    "License"); ~ you may not use this file except in compliance with the
    License. ~ You may obtain a copy of the License at ~ ~
    http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless required by
    applicable law or agreed to in writing, software ~ distributed under
    the License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES
    OR CONDITIONS OF ANY KIND, either express or implied. ~ See the
    License for the specific language governing permissions and ~
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>org.wso2.carbon.apimgt</groupId>
        <artifactId>apimgt</artifactId>
        <version>9.32.171-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>


    <modelVersion>4.0.0</modelVersion>
    <artifactId>org.wso2.carbon.apimgt.keymgt</artifactId>
    <packaging>bundle</packaging>
    <name>WSO2 Carbon - API Key Mgt</name>
    <description>Key Management functionality for API Mgt/Store solution</description>
    <url>http://wso2.org</url>
    <dependencies>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.core</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>log4j-over-slf4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
            <artifactId>org.wso2.carbon.identity.oauth</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-juli</artifactId>
            <version>${tomcat.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.extension.identity.oauth2.grantType.jwt</groupId>
            <artifactId>org.wso2.carbon.identity.oauth2.grant.jwt</artifactId>
            <version>${carbon.identity-oauth2-grant-jwt.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.datapublisher.authentication</groupId>
            <artifactId>org.wso2.carbon.identity.data.publisher.application.authentication</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.registry.core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.utils</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
            <artifactId>pax-logging-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.apimgt</groupId>
            <artifactId>org.wso2.carbon.apimgt.impl</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-jdk14</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>log4j-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.wso2.carbon.apimgt</groupId>
                    <artifactId>org.wso2.carbon.apimgt.keymgt.client</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.apimgt</groupId>
            <artifactId>org.wso2.carbon.apimgt.keymgt.client</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.metrics</groupId>
            <artifactId>org.wso2.carbon.metrics.manager</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.apimgt</groupId>
            <artifactId>org.wso2.carbon.apimgt.tracing</artifactId>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.claim.mgt</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.logging.correlation</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.14.0</version>
                <configuration>
                    <skip>${skip.aspectj}</skip>
                    <source>1.8</source>
                    <target>1.8</target>
                    <complianceLevel>1.8</complianceLevel>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED 
                        --add-opens java.base/java.io=ALL-UNNAMED 
                        --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED    
                        --add-opens java.base/java.util=ALL-UNNAMED 
                        --add-opens java.base/java.security=ALL-UNNAMED 
                        --add-opens java.base/sun.security.x509=ALL-UNNAMED
                        --add-opens java.base/java.security.cert=ALL-UNNAMED                   
                    </argLine>
                    <excludes>
                        <exclude>**/Abstract*</exclude>
                    </excludes>
                    <systemProperties>
                        <property>
                            <name>APIManagerDBConfigurationPath</name>
                            <value>${basedir}/src/test/resources/amConfig.xml</value>
                        </property>
                        <property>
                            <name>IdentityConfigurationPath</name>
                            <value>${basedir}/src/test/resources/identity.xml</value>
                        </property>
                    </systemProperties>
                    <classpathDependencyExcludes>
                        <classpathDependencyExclude>org.wso2.org.ops4j.pax.logging</classpathDependencyExclude>
                    </classpathDependencyExcludes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>
                            ${project.artifactId}
                        </Bundle-SymbolicName>

                        <Private-Package>
                            org.wso2.carbon.apimgt.keymgt.internal
                        </Private-Package>
                        <Import-Package>
                            org.apache.commons.codec.*,
                            org.slf4j,
                            org.osgi.framework.*;version="${imp.package.version.osgi.framework}",
                            org.osgi.service.*;version="${imp.package.version.osgi.service}",
                            org.apache.commons.logging.*; version="${import.package.version.commons.logging}",
                            org.wso2.carbon.identity.base.*; version="${carbon.identity.imp.pkg.version}",
                            org.wso2.carbon.identity.core.*; version="${carbon.identity.imp.pkg.version}",
                            *;resolution:=optional
                        </Import-Package>
                        <Export-Package>
                            !org.wso2.carbon.apimgt.keymgt.stub.validator,
                            !org.wso2.carbon.apimgt.keymgt.stub.provider,
                            !org.wso2.carbon.apimgt.keymgt.stub.subscriber,
                            !org.wso2.carbon.apimgt.keymgt.stub.types.axis2,
                            !org.wso2.carbon.apimgt.keymgt.stub.types.carbon,
                            !org.wso2.carbon.apimgt.keymgt.stub.useradmin,
                            org.wso2.carbon.apimgt.keymgt.*
                        </Export-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
